# FH-Radio-Studio

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  pubspec.yaml
app/lib/: app.dart  main.dart
app/test/: ai_environment_dialog_capture_test.dart  app_info_test.dart  app_shell_sidebar_capture_test.dart  app_shell_toolchain_fix_capture_test.dart  app_shell_toolchain_fix_test.dart  audio_analysis_state_test.dart  boot_logo_test.dart  custom_pool_delete_dialog_capture_test.dart  custom_pool_import_gate_capture_test.dart  custom_pool_render_capture_test.dart  dashboard_checklist_dialog_capture_test.dart  dashboard_confirm_dialog_capture_test.dart  dashboard_test.dart  fh_radio_studio_cli_runtime_test.dart  package_build_notice_dialog_capture_test.dart  package_build_overlay_capture_test.dart  package_loudness_dialog_test.dart  playlist_catalog_state_test.dart  playlist_layout_test.dart  playlist_plan_codec_test.dart  playlist_pool_render_capture_test.dart  playlist_render_capture_test.dart  project_refs_test.dart  project_workspace_test.dart  replace_editor_layout_test.dart  replace_editor_preview_timing_test.dart  replace_editor_render_capture_test.dart  replace_editor_state_test.dart  segment_label_flexibility_test.dart  siren_audio_cache_test.dart  siren_imports_test.dart  siren_library_screen_test.dart  studio_state_test.dart  system_audio_output_test.dart  system_proxy_test.dart  tooltip_theme_test.dart  track_timing_config_test.dart  widget_test.dart
app/tool/: dashboard_capture_main.dart  package_build_notice_capture_main.dart  package_loudness_dialog_capture_main.dart  playlist_capture_main.dart  playlist_visual_main.dart  replace_editor_capture_main.dart
app/windows/: CMakeLists.txt
backend/fh_radio_studio_cli/: __init__.py  __main__.py  audio.py  baseline.py  baseline_order.py  cli.py  common.py  deploy.py  external_tools.py  fsb5.py  game.py  import_audio.py  (+14 more)
docs/: design-decisions.md  development.md  project-path-references.md  roadmap.md
test/: conftest.py  test_ai_timepoints.py  test_audio_markers.py  test_cli_mock_game.py  test_import_audio.py  test_loudness.py  test_metadata.py  test_migration.py  test_project_refs.py  test_reconstruct_plan.py  test_toolchain.py  test_ui_state_fixtures.py
tools/: build_release.ps1  fh_radio_studio_cli.py  prepare_release_runtime.py
(+138 files in other folders)
